--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -80,6 +80,20 @@
             </div>
         </div>
 
+        <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                Available Rooms
+            </a>
+
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Click on an item to open room</a></li>
+                <li><hr class="dropdown-divider"></li>
+                {% for room in rooms %}
+                    <li><a class="dropdown-item" href="{{ url_for('show_room', room_id=room.room_id)}}">{{ room.room_name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
             <div class="btn-group me-2" role="group" aria-label="Button group with nested dropdown">
                 <div class="btn-group" role="group">
@@ -88,7 +102,6 @@
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
                         <li><a class="dropdown-item" href="{{ url_for('show_worlds') }}">All Worlds</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('show_selected_world', world_id=world.world_id) }}">Select World</a></li>
                         {% if current_user.creator_id == world.creator_id %}
                             <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#myModal">Edit World</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('show_switched_world', world_id=world.world_id) }}">Switch Visibility</a></li>
@@ -109,9 +122,6 @@
                 <a href="{{ url_for('show_worlds') }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-list-ul"></i></a>
             </div>
             <div class="btn-group me-2" role="group" aria-label="Third group">
-                <a href="{{ url_for('show_selected_world', world_id=world.world_id) }}" class="btn btn-info mt-4 mb-4"><i class="bi bi-check2"></i></a>
-            </div>
-            <div class="btn-group me-2" role="group" aria-label="Fourth group">
                 {% if current_user.creator_id == world.creator_id %}
                     <a href="#" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-pencil"></i></a>
                     <a href="{{ url_for('show_switched_world', world_id=world.world_id) }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-globe"></i></a>
@@ -123,7 +133,7 @@
                     <a href="{{ url_for('show_report', world_id=world.world_id, format_type='pdf') }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-filetype-html"></i></a>
                 {% endif %}
             </div>
-            <div class="btn-group" role="group" aria-label="Fifth group">
+            <div class="btn-group" role="group" aria-label="Forth group">
                 {% if current_user.creator_id == world.creator_id %}
                     <a href="#" class="btn btn-danger mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal_del"><i class="bi bi-trash"></i></a>
                 {% endif %}
