--- a/templates/person.html
+++ b/templates/person.html
@@ -15,5 +15,63 @@
                 {% endfor %}
             </div>
         {% endif %}
+
+        <!-- Modal -->
+        <div id="myModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Create Person</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="{{ url_for('show_persons_p', world_id=world.world_id) }}" method="POST">
+                            {{ form.csrf_token }}
+                            <div class="form-group mt-2 mb-2">
+                                <label for="{{ form.name.name }}">{{ form.name.label }}</label>
+                                {{ form.name(size=20, class="form-control") }}
+                            </div>
+                            <div class="form-group mt-2 mb-2">
+                                <label for="{{ form.description.name }}">{{ form.description.label }}</label>
+                                {{ form.description(size=40, class="form-control") }}
+                            </div>
+                            <div class="form-group mt-2 mb-2">
+                                <label for="{{ form.image.name }}">{{ form.image.label }}</label>
+                                {{ form.image(size=20, class="form-control") }}
+                            </div>
+                            <div class="form-group mt-2 mb-2">
+                                <label for="{{ form.room.name }}">{{ form.room.label }}</label>
+                                {{ form.room(class="form-select") }}
+                            </div>
+                            <button type="submit" class="btn btn-primary mt-4 mb-4">Create</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+            <div class="btn-group me-2" role="group" aria-label="Button group with nested dropdown">
+                <div class="btn-group" role="group">
+                    <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle mt-4 mb-4" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-activity"></i> Actions
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                        {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#myModal">Create Person</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+            <div class="btn-group me-2" role="group" aria-label="Second group">
+                {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+                    <a href="#" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-plus-square"></i></a>
+                {% endif %}
+            </div>
+        </div>
     </div>
 {% endblock %}
