--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {#  Page header #}
     <div class="container-fluid pb-2 mt-4 mb-2">
         <h2>{% block title %} {{ world.world_name }} {% endblock %} ({% if world.reduced == 0 %}<i class="bi bi-chevron-bar-left"></i>ringle, {% endif %}{% if world.visible == 1 %}<i class="bi bi-globe"></i> Public{% else %}Closed{% endif %}, {% if world.archived == 1 %}<i class="bi bi-archive"></i> Archived{% else %}Active{% endif %})</h2>
     </div>
 
+    {#  Page content #}
     <div class="container-fluid pb-3 mt-2 mb-2">
+
+        {#  Show detailed information regarding the selected world #}
         <div class="card mb-3" style="max-width: 720px;">
             <div class="row g-0">
                 <div class="col-md-4">
@@ -21,10 +25,9 @@
             </div>
         </div>
 
-        <!-- Delete Modal -->
+        {# Modal dialog window - delete currently selected world #}
         <div id="myModal_del" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-                <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Delete World</h4>
@@ -42,10 +45,9 @@
             </div>
         </div>
 
-        <!-- Modal -->
+        {# Modal dialog window - edit currently selected world #}
         <div id="myModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-                <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Edit World</h4>
@@ -80,6 +82,7 @@
             </div>
         </div>
 
+        {#  Display dropdowns containing links to all depending elements #}
         <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                 Available Rooms
@@ -94,7 +97,11 @@
             </ul>
         </div>
 
+
+        {#  Display action buttons regarding the selected world #}
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+
+            {#  Text-based links #}
             <div class="btn-group me-2" role="group" aria-label="Button group with nested dropdown">
                 <div class="btn-group" role="group">
                     <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle mt-4 mb-4" data-bs-toggle="dropdown" aria-expanded="false">
@@ -118,6 +125,8 @@
                     </ul>
                 </div>
             </div>
+
+            {#  Same links implemented using small buttons #}
             <div class="btn-group me-2" role="group" aria-label="Second group">
                 <a href="{{ url_for('show_worlds') }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-list-ul"></i></a>
             </div>
