--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,7 @@
+/*
+    Adds page margin and padding for all pages.
+    Displays a PNG wallpaper in parallax mode.
+ */
 body {
     padding: 10px;
     margin: 10px;
@@ -8,6 +12,10 @@ body {
     -o-background-size: cover;
 }
 
+/*
+    Parallax mode does not seem to be fully compatible on iOS devices.
+    Just use a very large static image instead.
+ */
 @media (pointer:none), (pointer:coarse) {
     body {
         background: url('/static/background.jpg') center center scroll;
@@ -18,16 +26,26 @@ body {
 	text-align: center;
 }
 
+/*
+    Always stretch the carousel images, but limit their size to a certain value.
+ */
 .carousel-inner img {
     max-width: 100%;
     max-height: 100%;
     height: 300px;
 }
 
+/*
+    Bootstrap and Markdown editor CSS are conflicting regarding the toolbar background color.
+    Overwrite it here so the foreground colors are clearly visible.
+ */
 .editor-toolbar {
     background: #f8f9fa;
 }
 
+/*
+    Add some individual styles which aren't available in the Bootstrap package by default.
+ */
 .btn-space {
     margin-right: 15px;
 }
