--- a/templates/creator.html
+++ b/templates/creator.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {#  Page header #}
     <div class="container-fluid pb-2 mt-4 mb-2">
         <h2>{% block title %} All Creators {% endblock %}</h2>
     </div>
 
+    {#  Page content #}
     <div class="container-fluid pb-3 mt-2 mb-2">
+
+        {#  Show list of all creators #}
         {% if creators.count() == 0 %}
             No entries found.<br>
         {% else %}
