--- a/templates/image.html
+++ b/templates/image.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {#  Page header #}
     <div class="container-fluid pb-2 mt-4 mb-2">
         <h2>{% block title %} Uploaded image {% endblock %}</h2>
     </div>
 
+    {#  Page content #}
     <div class="container-fluid pb-3 mt-2 mb-2">
         <img src="https://eu2.contabostorage.com/6c12e0aef74840bf9c331581d3f4d52c:kringle-public/{{ creator_name }}/{{ filename }}" class="img-fluid rounded-start" alt="Uploaded Image">
     </div>
 
+    {# Display simple button - go back to the file overview page #}
     <div class="container-fluid pb-3 mt-2 mb-2">
         <a href="{{ url_for('show_storage') }}" class="btn btn-primary mt-4 mb-4">
             <i class="bi bi-list-ul"></i> All Files
