--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {#  Page header #}
     <div class="container-fluid pb-2 mt-4 mb-2">
         <h2>{% block title %} Login {% endblock %}</h2>
     </div>
 
+    {#  Page content #}
     <div class="container-fluid pb-3 mt-2 mb-2">
+
+        {# Display form and possible error message - log in user #}
         <h4 class="mb-3">Enter your login data</h4>
         <form action="{{ url_for('show_login') }}" method="POST">
             {{ form.csrf_token }}
