--- a/templates/report.html
+++ b/templates/report.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {#  Page header #}
     <div class="container-fluid pb-2 mt-4 mb-2">
         <h2>{% block title %} Report {% endblock %}</h2>
     </div>
 
+    {#  Page content #}
     <div class="container-fluid pb-3 mt-2 mb-2">
+
+        {#  Display report - the markdown has been converted to HTML #}
         {{ md_report|safe }}
     </div>
 
+    {# Display simple button - open print dialog via Javascript #}
     <button onclick="window.print()" class="btn btn-primary mt-4 mb-4 btn-space">Print</button>
 {% endblock %}
