--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {#  Page header #}
     <div class="container-fluid pb-2 mt-4 mb-2">
         <h2>{% block title %} Stats {% endblock %}</h2>
     </div>
 
+    {#  Page content #}
     <div class="container-fluid pb-3 mt-2 mb-2">
+
+        {#  Show statistics about all stored elements in database #}
         <h4 class="mb-3">Elements</h4>
         <ul class="list-group">
             <li class="list-group-item">Creators <span class="badge bg-secondary">{{ counts['creator'] }}</span></li>
@@ -20,6 +24,7 @@
 
         <hr class="little mt-4 mb-4">
 
+        {#  Show statistics about all stored files on S3 storage #}
         <h4 class="mb-3">S3 Storage</h4>
         <ul class="list-group">
             {% for item in bucket_all %}
