--- a/templates/release.html
+++ b/templates/release.html
@@ -12,6 +12,8 @@
         {#  Show release information #}
         <div class="card">
             <div class="card-body">
+                <h4 class="mb-3">v1.4 (20220707)</h4>
+                New Feature: Show progress for (un)solved challenges<br><br>
                 <h4 class="mb-3">v1.3 (20220705)</h4>
                 New Feature: Distinction between Kringle and non-Kringle themes<br>
                 New Feature: World Archive<br><br>
